Новые данные о себе

--- a/index.html
+++ b/index.html
@@ -56,8 +56,16 @@
             <a class="linsk__link">Фотография, походы, алмазная мозаика, сериалы</a>
           </li>
           <li class="links__link">
+            <p class="links__title">Инструменты тестировщика</p>
+            <a class="linsk__link">DevTools, Charles, Kibana, Grafana, Sentry, Sublime Text и т.д.</a>
+          </li>
+          <li class="links__link">
             <p class="links__title">Образование</p>
             <a class="linsk__link">Высшее образование</a>
+          </li>
+          <li class="links__link">
+            <p class="links__title">Возраст</p>
+            <a class="linsk__link">23 года</a>
           </li>
         </ul>
       </section>
